--- a/style.css
+++ b/style.css
@@ -35,6 +35,26 @@
     transform: translateX(0px);
   }
 }
+@keyframes rotate360 {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
+@keyframes expandTop {
+  from{
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+
 /* Utility Classes */
 .slideInLeft{
   animation: slideInLeft linear;
@@ -51,6 +71,18 @@
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
 }
+.flex-direction-col{
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: start !important;
+}
+.visibility{
+  display: flex !important;
+}
+.expand-top{
+  animation: expandTop 2s ease both;
+}
+
 a {
   text-decoration: none;
 }
@@ -64,7 +96,7 @@ body {
   overflow-x: hidden;
   margin: 0;
 }
-.nav {
+.nav, .innernav, .logonav {
   padding: 20px 0px 20px 70px;
   display: flex;
   font-weight: 550;
@@ -77,6 +109,22 @@ body {
   z-index: 3;
   background-color: rgb(243, 243, 243);
   width: 100%;
+}
+.innernav, .logonav{
+  padding: 0;
+  width: auto;
+}
+.hamburger-logo{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  display: none;
+}
+.hamburger-logo svg{
+  margin-top: auto;
+}
+.rotate{
+  animation: rotate360 2s;
 }
 .title {
   color: var(--theme-color);
@@ -380,6 +428,9 @@ input:focus {
 @media screen and (max-width: 750px) {
   .nav {
     padding: 15px 0px 15px 27px !important;
+  }
+  .hamburger-logo{
+    display: flex;
   }
   .nav-child {
     display: none;
