--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
 :root {
   --theme-color: #e92d28;
+  --dark-background: #101828;
+  --dark-color: #EEEEEE;
+  --bg-color-light: rgb(229, 229, 231)
+  ;
 }
 * {
   font-family: "Fira Sans", serif;
+}
+.html-dark-theme{
+  background-color: var(--dark-background) !important;
+  color: var(--dark-color) !important;
+}
+.nav-dark{
+  color: #ffffff !important;
+  background-color: #1e2939 !important;
+}
+.html-pseudo-dark{
+  color: var(--dark-background) !important;
 }
 /* Animations */
 @keyframes scale {
@@ -56,6 +71,10 @@
 
 
 /* Utility Classes */
+.align-self{
+  align-self: start !important;
+  padding: 0 !important;
+}
 .slideInLeft{
   animation: slideInLeft linear;
   animation-timeline: view();
@@ -91,7 +110,7 @@ a:link {
   color: var(--theme-color);
 }
 body {
-  background-color: rgb(243, 243, 243);
+  background-color: rgb(243,243,243);
   box-sizing: border-box;
   overflow-x: hidden;
   margin: 0;
@@ -107,7 +126,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 3;
-  background-color: rgb(243, 243, 243);
+  background-color: rgb(243,243,243);
   width: 100%;
 }
 .innernav, .logonav{
@@ -144,8 +163,28 @@ body {
   transition: all 0.05s;
 }
 .nav-child:hover{
-  transform: translateY(-5px);
+  transform: translateY(-2px);
   color: var(--theme-color);
+}
+.sun:hover, .moon:hover{
+  fill: var(--theme-color);
+}
+.sun{
+  display: none;
+}
+.theme-switch{
+  align-self: center;
+  cursor: pointer;
+  padding-left: 50px;
+}
+.nav-dark .moon{
+  display: none;
+}
+.nav-dark .sun{
+  display: inline;
+}
+.nav-dark .hamburger-logo svg{
+  fill: white;
 }
 .nav-child > svg {
   color: black;
@@ -291,8 +330,8 @@ input:focus {
   align-items: start;
   margin: 50px auto;
 }
-#first-feature,
-#second-feature {
+.first-feature,
+.second-feature {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -302,11 +341,11 @@ input:focus {
   display: flex;
   align-items: center;
 }
-#first-feature {
+.first-feature {
   color: white;
   background-image: url("https://demo.gloriathemes.com/platea/demo/wp-content/uploads/2024/12/section-bg-02.jpg");
 }
-#second-feature {
+.second-feature {
   background-image: url("https://demo.gloriathemes.com/platea/demo/wp-content/uploads/2024/12/section-bg-03.jpg");
 }
 .feature-data {
@@ -343,7 +382,7 @@ input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #e5e5e7;
+  background-color: var(--bg-color-light);
   margin: 10vh auto;
   max-width: 90vw;
   border-radius: 20px;
@@ -381,11 +420,14 @@ input:focus {
   text-transform: uppercase;
   transition: all 0.2s;
 }
+.tag-element-js{
+  background-color: #99a1af8b !important;
+}
 .tag-element:hover {
   background-color: var(--theme-color);
   color: white;
   cursor: pointer;
-  transform: translateY(-5px);
+  transform: translateY(-2px);
 }
 .footer {
   display: flex;
@@ -439,7 +481,7 @@ input:focus {
     display: none;
     font-size: 18px;
   }
-  .nav-child > svg {
+  .nav-child > svg:not(.sun,.moon) {
     display: none;
   }
   .hero {
@@ -532,7 +574,7 @@ input:focus {
   .nav {
     padding-left: 50px;
   }
-  .nav-child > svg {
+  .nav-child > svg:not(.sun,.moon) {
     display: none;
   }
   #hero-text > * {
@@ -565,10 +607,10 @@ input:focus {
     grid-template-columns: 1fr;
     height: 150vh;
   }
-  #first-feature {
+  .first-feature {
     background-position: top center;
   }
-  #second-feature {
+  .second-feature {
     background-position: top;
   }
   .feature-data {
