--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   --bg-color-light: rgb(229, 229, 231)
   ;
 }
+html{
+  scroll-behavior: smooth;
+}
 * {
   font-family: "Fira Sans", serif;
 }
@@ -107,7 +110,7 @@ a {
 }
 a:visited,
 a:link {
-  color: var(--theme-color);
+  color: inherit;
 }
 body {
   background-color: rgb(243,243,243);
@@ -299,6 +302,7 @@ input:focus {
 }
 .grid img {
   width: 100%;
+  /* height: 261.164px; */
   border-radius: 15px;
 }
 .menu-type {
